<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizGame</string>
    <string name="action_delete_db">Cancella Database</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_menu">Menu</string>
    <string name="button_new_game">Nuova partita</string>
    <string name="button_list_games">Elenco partite</string>
    <string name="button_logout">Logout</string>
    <string name="button_statistics">Statistiche</string>
    <string name="title_activity_statistics">Statistiche Giocatore</string>
    <string name="action_settings">Settings</string>
    <string name="statistic_nick">User name: </string>
    <string name="statistic_giocate">Partite giocate: </string>
    <string name="statistic_vinte">Partite vinte: </string>
    <string name="statistic_pareggiate">Partite pareggiate: </string>
    <string name="statistic_perse">Partite perse: </string>
    <string name="statistic_giuste">Risposte giuste: </string>
    <string name="statistic_sbagliate">Risposte sbagliate: </string>
    <string name="statistic_ultimo_accesso">Ultimo accesso: </string>
    <string name="title_activity_start_game">Nuova Partita</string>
    <string name="title_activity_list_games">Elenco Partite</string>
    <string name="title_activity_connection">Connessione...</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_score">Punteggio</string>
    <string name="print_score">PUNTI</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_end_game">Fine Partita</string>

</resources>
