<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="it.splineyellow.quizgame.StatisticsActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/st_nickname"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="6dp"
            android:text="@string/statistic_nick"
            android:textStyle="bold|italic"
            android:typeface="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_nickname"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/st_nickname"
            android:textStyle="italic"
            android:typeface="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/st_giocate"
            android:layout_below="@id/st_nickname"
            android:text="@string/statistic_giocate"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold|italic"
            android:typeface="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_giocate"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/st_nickname"
            android:layout_alignBottom="@id/st_giocate"
            android:textStyle="italic"
            android:typeface="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/st_vinte"
            android:layout_below="@id/st_giocate"
            android:text="@string/statistic_vinte"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold|italic"
            android:typeface="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_vinte"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/st_giocate"
            android:layout_alignBottom="@id/st_vinte"
            android:textStyle="italic"
            android:typeface="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/st_pareggiate"
            android:layout_below="@id/st_vinte"
            android:text="@string/statistic_pareggiate"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold|italic"
            android:typeface="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_pareggiate"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/st_vinte"
            android:layout_alignBottom="@id/st_pareggiate"
            android:textStyle="italic"
            android:typeface="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/st_perse"
            android:layout_below="@id/st_pareggiate"
            android:text="@string/statistic_perse"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold|italic"
            android:typeface="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_perse"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/st_pareggiate"
            android:layout_alignBottom="@id/st_perse"
            android:textStyle="italic"
            android:typeface="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/st_giuste"
            android:layout_below="@id/st_perse"
            android:text="@string/statistic_giuste"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold|italic"
            android:typeface="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_giuste"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/st_perse"
            android:layout_alignBottom="@id/st_giuste"
            android:textStyle="italic"
            android:typeface="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/st_sbagliate"
            android:layout_below="@id/st_giuste"
            android:text="@string/statistic_sbagliate"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold|italic"
            android:typeface="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_sbagliate"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/st_giuste"
            android:layout_alignBottom="@id/st_sbagliate"
            android:textStyle="italic"
            android:typeface="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/st_ultimo_accesso"
            android:layout_below="@id/st_sbagliate"
            android:text="@string/statistic_ultimo_accesso"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="6dp"
            android:textStyle="bold|italic"
            android:typeface="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_ultimo_accesso"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/st_sbagliate"
            android:layout_alignBottom="@id/st_ultimo_accesso"
            android:textStyle="italic"
            android:typeface="normal"
            />

    </RelativeLayout>
</ScrollView>